bpo-32402: io: Add missing NULL check. (GH-4971)

_PyUnicode_FromId() may return NULL.

Reported by coverity scan: CID 1426868, 1426867.